--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -6,4 +6,10 @@
     width: 100%;
     text-align: right;
   }
+  #adrian-1 .ant-switch-checked {
+    background-color: #076fed;
+  }
+  #elena-1 .ant-switch-checked {
+    background-color: #ec4699;
+  }
 }
