--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -10,6 +10,9 @@
     background-color: #076fed;
   }
   #elena-1 .ant-switch-checked {
-    background-color: #ec4699;
+    background-color: #3ed94a;
+  }
+  .ant-collapse > .ant-collapse-item > div.ant-collapse-header {
+    color: inherit;
   }
 }
