--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -7,10 +7,10 @@
     text-align: right;
   }
   #adrian-1 .ant-switch-checked {
-    background-color: #076fed;
+    background-color: #319ebf;
   }
   #elena-1 .ant-switch-checked {
-    background-color: #3ed94a;
+    background-color: #58c990;
   }
   .ant-collapse > .ant-collapse-item > div.ant-collapse-header {
     color: inherit;
